fix tests and add new class NumberValidatorMessageConverter