@@ -1,92 +1,94 @@
 package pl.lotto.numberreceiver;
 
-import java.time.LocalDateTime;
-import java.util.Arrays;
-import java.util.List;
+import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 import pl.lotto.numberreceiver.dto.NumberReceiverResultDto;
 import pl.lotto.numberreceiver.dto.TicketDto;
+
+import java.time.LocalDateTime;
+import java.util.Arrays;
+import java.util.HashSet;
+import java.util.List;
+
 import static org.assertj.core.api.Assertions.assertThat;
 
 class NumberReceiverFacadeSpec implements SampleTicket {
 
     @Test
+    @DisplayName("should_return_correct_message_when_user_inputted_six_numbers")
     public void should_return_correct_message_when_user_inputted_six_numbers() {
         // given
         List<Integer> numbersFromUser = Arrays.asList(1, 2, 3, 4, 5, 6);
         TicketGenerable ticketGenerator = new TicketGeneratorTestImpl(numbersFromUser);
-        NumberReceiverFacade numberReceiverFacade = new NumberReceiverConfiguration().buildModuleForTests(ticketGenerator);
-
+        NumberReceiverFacade numberReceiverFacade = new NumberReceiverConfiguration().buildModuleForTests(ticketGenerator, new TicketRepositoryTestImpl(new HashSet<>()));
         // when
         NumberReceiverResultDto actualResult = numberReceiverFacade.inputNumbers(numbersFromUser);
-
         // then
-        TicketDto ticketDto = sampleTicketWithTestHash(
-                Arrays.asList(1, 2, 3, 4, 5, 6),
-                LocalDateTime.of(2022, 7, 10, 12, 0));
-        NumberReceiverResultDto expectedResult = new NumberReceiverResultDto("correct message", ticketDto);
-        assertThat(actualResult.message()).isEqualTo(expectedResult.message());
+        TicketDto ticketDto = sampleTicketWithTestHash(Arrays.asList(1, 2, 3, 4, 5, 6)
+                , LocalDateTime.of(2022, 7, 10, 12, 0));
+
+        NumberReceiverResultDto expectedResult = new NumberReceiverResultDto(List.of("correct message"), ticketDto);
+        assertThat(actualResult).isEqualTo(expectedResult);
     }
-//
-//    @Test
-//    @DisplayName("should return failed message when user inputed less than six numbers")
-//    public void should_return_failed_message_when_user_inputed_less_than_six_numbers() {
-//        // given
-//        NumberReceiverFacade numberReceiverFacade = new NumberReceiverConfiguration().buildModuleForTests(ticketGenerator);
-//        List<Integer> numbersFromUser = Arrays.asList(1, 2, 3, 4, 5);
-//
-//        // when
-//        NumberReceiverResultDto actualResult = numberReceiverFacade.inputNumbers(numbersFromUser);
-//
-//        // then
-//        NumberReceiverResultDto expectedResult = new NumberReceiverResultDto("you must give exactly six numbers");
-//        assertThat(actualResult.message()).isEqualTo(expectedResult.message());
-//    }
-//
-//    @Test
-//    @DisplayName("should return failed message when user inputed more than six numbers")
-//    public void should_return_failed_message_when_user_inputed_more_than_six_numbers() {
-//        // given
-//        NumberReceiverFacade numberReceiverFacade = new NumberReceiverConfiguration().buildModuleForTests(ticketGenerator);
-//        List<Integer> numbersFromUser = Arrays.asList(1, 2, 3, 4, 5, 6, 7);
-//
-//        // when
-//        NumberReceiverResultDto actualResult = numberReceiverFacade.inputNumbers(numbersFromUser);
-//
-//        // then
-//        NumberReceiverResultDto expectedResult = new NumberReceiverResultDto("you must give exactly six numbers");
-//        assertThat(actualResult.message()).isEqualTo(expectedResult.message());
-//    }
-//
-//    @Test
-//    @DisplayName("should return failed message when user inputed number out of range")
-//    public void should_return_failed_message_when_user_inputed_number_out_of_range() {
-//        // given
-//        NumberReceiverFacade numberReceiverFacade = new NumberReceiverConfiguration().buildModuleForTests(ticketGenerator);
-//        List<Integer> numbersFromUser = Arrays.asList(1, 2, 300, 4, 5, 6);
-//
-//        // when
-//        NumberReceiverResultDto actualResult = numberReceiverFacade.inputNumbers(numbersFromUser);
-//
-//        // then
-//        NumberReceiverResultDto expectedResult = new NumberReceiverResultDto("all numbers should be in range 1-99");
-//        assertThat(actualResult.message()).isEqualTo(expectedResult.message());
-//    }
-//
-//    @Test
-//    @DisplayName("should return failed message when user inputed repeated number out of range")
-//    public void should_return_failed_message_when_user_inputed_repeated_number_out_of_range() {
-//        // given
-//        NumberReceiverFacade numberReceiverFacade = new NumberReceiverConfiguration().buildModuleForTests(ticketGenerator);
-//        List<Integer> numbersFromUser = Arrays.asList(1, 2, 3, 50, 50, 6);
-//
-//        // when
-//        NumberReceiverResultDto actualResult = numberReceiverFacade.inputNumbers(numbersFromUser);
-//
-//        // then
-//        NumberReceiverResultDto expectedResult = new NumberReceiverResultDto("you must give exactly six not repeatable numbers");
-//        assertThat(actualResult.message()).isEqualTo(expectedResult.message());
-//    }
+
+    @Test
+    @DisplayName("should return failed message when user inputed less than six numbers")
+    public void should_return_failed_message_when_user_inputed_less_than_six_numbers() {
+
+        // given
+        List<Integer> numbersFromUser = Arrays.asList(1, 2, 3, 4, 5);
+        TicketGenerable ticketGenerator = new TicketGeneratorTestImpl(numbersFromUser);
+        TicketRepository ticketRepository = new TicketRepositoryTestImpl(new HashSet<>());
+        NumberReceiverFacade numberReceiverFacade = new NumberReceiverConfiguration()
+                .buildModuleForTests(ticketGenerator, ticketRepository);
+        //when
+        NumberReceiverResultDto actualResult = numberReceiverFacade.inputNumbers(numbersFromUser);
+        //then
+        NumberReceiverResultDto expectedResult = new NumberReceiverResultDto(List.of("you must give exactly six numbers"),
+                null);
+        assertThat(actualResult).isEqualTo(expectedResult);
+
+    }
+
+    @Test
+    @DisplayName("should return failed message when user inputed more than six numbers")
+    public void should_return_failed_message_when_user_inputed_more_than_six_numbers() {
+
+        // given
+        List<Integer> numbersFromUser = Arrays.asList(1, 2, 3, 4, 5, 6, 7);
+        TicketGenerable ticketGenerator = new TicketGeneratorTestImpl(numbersFromUser);
+        TicketRepository ticketRepository = new TicketRepositoryTestImpl(new HashSet<>());
+        NumberReceiverFacade numberReceiverFacade = new NumberReceiverConfiguration()
+                .buildModuleForTests(ticketGenerator, ticketRepository);
+        //when
+        NumberReceiverResultDto actualResult = numberReceiverFacade.inputNumbers(numbersFromUser);
+        //then
+        NumberReceiverResultDto expectedResult = new NumberReceiverResultDto(List.of("you must give exactly six numbers"),
+                null);
+        assertThat(actualResult).isEqualTo(expectedResult);
+
+    }
+
+    @Test
+    @DisplayName("should return failed message when user inputed number out of range")
+    public void should_return_failed_message_when_user_inputed_number_out_of_range() {
+        // given
+
+        List<Integer> numbersFromUser = Arrays.asList(1, 2, 3, 4, 5, 6000);
+        TicketGenerable ticketGenerator = new TicketGeneratorTestImpl(numbersFromUser);
+        TicketRepository ticketRepository = new TicketRepositoryTestImpl(new HashSet<>());
+        NumberReceiverFacade numberReceiverFacade = new NumberReceiverConfiguration()
+                .buildModuleForTests(ticketGenerator, ticketRepository);
+        //when
+
+        NumberReceiverResultDto actualResult = numberReceiverFacade.inputNumbers(numbersFromUser);
+
+        //then
+        NumberReceiverResultDto expectedResult = new NumberReceiverResultDto(List.of("all numbers should be in range 1-99"),
+                null);
+        assertThat(actualResult).isEqualTo(expectedResult);
+    }
+
 //
 //    @Test
 //    @DisplayName("should find the ticket by hash in TicketRepository")
